--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+a, a:hover, a:visited, a:active {
+  color: inherit;
+  text-decoration: none;
+  text-align:center;
+ }
